ERS accessioning related changes